[package]
name = "fastnoise-lite"
version = "1.1.0"
edition = "2021"
license = "MIT"
description = "FastNoiseLite is an extremely portable open source noise generation library with a large selection of noise algorithms"
repository = "https://github.com/Auburn/FastNoiseLite"
readme = "README.md"
authors = ["Jordan Peck", "Keavon Chambers"]
categories = [
	"algorithms",
	"game-development",
	"graphics",
	"multimedia::images",
	"rendering",
]
keywords = [
	"noise",
	"simplex",
	"perlin",
	"procedural",
	"terrain",
]

[features]
f64 = []
std = ["num-traits/std"]
libm = ["num-traits/libm"]
default = ["std"]

[dependencies]
num-traits = { version = "0.2.16", optional = true, default-features = false }
